ajustement de tous les test avec le nouveau code de main (remplacer les pair avec Tuple + nouvelle facon de creer des pieces) + Ajout de PlayerController