@@ -1,10 +1,7 @@
 package com.chessapp.chessapp;
 
-import com.chessapp.chessapp.model.Plateau;
-import com.chessapp.chessapp.model.Piece;
-import com.chessapp.chessapp.model.Pion;
+import com.chessapp.chessapp.model.*;
 import javafx.application.Platform;
-import javafx.fxml.JavaFXBuilderFactory;
 import javafx.util.Pair;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -16,7 +13,7 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class MouvementBlancTest {
+public class MouvementTest {
 
     private Plateau plateau;
 
@@ -30,24 +27,38 @@ public class MouvementBlancTest {
         plateau = new Plateau();
         try {
             // Initialisation des pièces sur le plateau
-            plateau.addPiece(0, 3, 'P', 1); // Pion en A4
-            plateau.addPiece(1, 1, 'P', 1); // Pion en B2
-            plateau.addPiece(2, 5, 'R', 1); // Tour en C6
-            plateau.addPiece(2, 2, 'K', 1); // Roi en C3
-            plateau.addPiece(3, 1, 'P', 1); // Pion en D2
-            plateau.addPiece(3, 3, 'B', 1); // Fou en D4
-            plateau.addPiece(4, 6, 'Q', 1); // Reine en E7
-            plateau.addPiece(7, 5, 'N', 1); // Cavalier en H6
-            plateau.addPiece(7, 3, 'P', 1); // Pion en H4
+            Pawn pionA4 = new Pawn(0,3,-1);
+            plateau.addPiece(0,3,pionA4);
+            Pawn pionB2 = new Pawn(1,1,-1);
+            plateau.addPiece(1,1,pionB2);
+            Rook tourC6 = new Rook(2,5,-1);
+            plateau.addPiece(2, 5, tourC6); // Tour en C6
+            King roiC3 = new King(2,2,-1);
+            plateau.addPiece(2, 2, roiC3); // Roi en C3
+            Pawn pionD2 = new Pawn(3,1,-1);
+            plateau.addPiece(3, 1, pionD2); // Pion en D2
+            Bishop fouD4 = new Bishop(3,3,-1);
+            plateau.addPiece(3, 3, fouD4); // Fou en D4
+            Queen reineE7 = new Queen(4,6,-1);
+            plateau.addPiece(4, 6, reineE7); // Reine en E7
+            Knight cavalierH6 = new Knight(7,5,-1);
+            plateau.addPiece(7, 5, cavalierH6); // Cavalier en H6
+            Pawn pionH4 = new Pawn(7,3,-1);
+            plateau.addPiece(7, 3, pionH4); // Pion en H4
 
             // Initialisation de quelques pièces noires
-            plateau.addPiece(0, 4, 'P', -1); // Pion en D5
-            plateau.addPiece(1, 6, 'P', -1); // Pion en B7
-            plateau.addPiece(3, 5, 'P', -1); // Pion en D6
-            plateau.addPiece(6, 4, 'P', -1); // Pion en G5
-            plateau.addPiece(6, 6, 'P', -1); // Pion en G7
-            plateau.addPiece(7, 7, 'N', -1); // Cavalier en H8
-            plateau.addPiece(4, 0, 'P', -1); // Pion en A5*/
+            Pawn pionA5 = new Pawn(0,4,1);
+            plateau.addPiece(0, 4, pionA5); // Pion en D5
+            Pawn pionB7 = new Pawn(1,6,1);
+            plateau.addPiece(1, 6, pionB7); // Pion en B7
+            Pawn pionD6 = new Pawn(3,5,1);
+            plateau.addPiece(3, 5, pionD6); // Pion en D6
+            Pawn pionG5 = new Pawn(6,4,1);
+            plateau.addPiece(6, 4, pionG5); // Pion en G5
+            Pawn pionG7 = new Pawn(6,6,1);
+            plateau.addPiece(6, 6, pionG7); // Pion en G7
+            Pawn pionG8 = new Pawn(6,7,1);
+            plateau.addPiece(6, 7, pionG8); // Cavalier en H8
 
 
         } catch (Exception e) {
@@ -60,7 +71,7 @@ public class MouvementBlancTest {
     public void test1() throws Exception {
         try {
             Piece piece = plateau.getPiece(0, 3);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
+            List<Tuple> moves = piece.calculateMovements(plateau);
             assertTrue(moves.isEmpty());
         } catch (Exception e) {
             fail("Exception during test execution: " + e.getMessage());
@@ -72,10 +83,10 @@ public class MouvementBlancTest {
     public void test2() {
         try {
             Piece piece = plateau.getPiece(1, 1);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(1, 2), new Pair<>(1, 3)
-            );
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = Arrays.asList(
+                    new Tuple(1, 2), new Tuple(1, 3));
+
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
             fail("Exception during test execution: " + e.getMessage());
@@ -87,10 +98,10 @@ public class MouvementBlancTest {
     public void test3() {
         try {
             Piece piece = plateau.getPiece(2, 5);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(2, 4), new Pair<>(2, 3), new Pair<>(2, 6), new Pair<>(2, 7), // Verticalement
-                    new Pair<>(1, 5), new Pair<>(0, 5), new Pair<>(3, 5) // Horizontalement
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = Arrays.asList(
+                    new Tuple(2, 4), new Tuple(2, 3), new Tuple(2, 6), new Tuple(2, 7), // Verticalement
+                    new Tuple(1, 5), new Tuple(0, 5), new Tuple(3, 5) // Horizontalement
             );
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
@@ -103,11 +114,11 @@ public class MouvementBlancTest {
     public void test4() {
         try {
             Piece piece = plateau.getPiece(2, 2);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(2, 1), new Pair<>(2, 3),
-                    new Pair<>(1, 2), new Pair<>(3, 2),
-                    new Pair<>(1, 3)
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = Arrays.asList(
+                    new Tuple(2, 1), new Tuple(2, 3),
+                    new Tuple(1, 2), new Tuple(3, 2),
+                    new Tuple(1, 3)
             );
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
@@ -120,9 +131,9 @@ public class MouvementBlancTest {
     public void test5() {
         try {
             Piece piece = plateau.getPiece(3, 1);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(3, 2)
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = List.of(
+                    new Tuple(3, 2)
             );
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
@@ -135,11 +146,11 @@ public class MouvementBlancTest {
     public void test6() {
         try {
             Piece piece = plateau.getPiece(3, 3);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(4, 4), new Pair<>(5, 5), new Pair<>(6, 6),
-                    new Pair<>(2, 4), new Pair<>(1, 5), new Pair<>(0, 6),
-                    new Pair<>(4, 2), new Pair<>(5, 1), new Pair<>(6, 0)
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = Arrays.asList(
+                    new Tuple(4, 4), new Tuple(5, 5), new Tuple(6, 6),
+                    new Tuple(2, 4), new Tuple(1, 5), new Tuple(0, 6),
+                    new Tuple(4, 2), new Tuple(5, 1), new Tuple(6, 0)
             );
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
@@ -152,16 +163,16 @@ public class MouvementBlancTest {
     public void test7() {
         try {
             Piece piece = plateau.getPiece(4, 6);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(4, 5), new Pair<>(4, 4), new Pair<>(4, 3), new Pair<>(4, 2), new Pair<>(4, 1), new Pair<>(4, 0),
-                    new Pair<>(4, 7),
-                    new Pair<>(3, 6), new Pair<>(2, 6), new Pair<>(1, 6),
-                    new Pair<>(5, 6), new Pair<>(6, 6),
-                    new Pair<>(3, 5),
-                    new Pair<>(5, 7),
-                    new Pair<>(3, 7),
-                    new Pair<>(5, 5), new Pair<>(6, 4)
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = Arrays.asList(
+                    new Tuple(4, 5), new Tuple(4, 4), new Tuple(4, 3), new Tuple(4, 2), new Tuple(4, 1), new Tuple(4, 0),
+                    new Tuple(4, 7),
+                    new Tuple(3, 6), new Tuple(2, 6), new Tuple(1, 6),
+                    new Tuple(5, 6), new Tuple(6, 6),
+                    new Tuple(3, 5),
+                    new Tuple(5, 7),
+                    new Tuple(3, 7),
+                    new Tuple(5, 5), new Tuple(6, 4)
             );
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
@@ -174,10 +185,10 @@ public class MouvementBlancTest {
     public void test8() {
         try {
             Piece piece = plateau.getPiece(7, 5);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(5, 4), new Pair<>(5, 6), // Saute en G4 et G6
-                    new Pair<>(6, 3), new Pair<>(6, 7) // Saute en F3 et F7
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = Arrays.asList(
+                    new Tuple(5, 4), new Tuple(5, 6), // Saute en G4 et G6
+                    new Tuple(6, 3), new Tuple(6, 7) // Saute en F3 et F7
             );
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
@@ -191,9 +202,9 @@ public class MouvementBlancTest {
     public void test9() {
         try {
             Piece piece = plateau.getPiece(7, 3);
-            List<Pair<Integer, Integer>> moves = piece.calculateMovements();
-            List<Pair<Integer, Integer>> expectedMoves = Arrays.asList(
-                    new Pair<>(7, 4), new Pair<>(6, 4)
+            List<Tuple> moves = piece.calculateMovements(plateau);
+            List<Tuple> expectedMoves = Arrays.asList(
+                    new Tuple(7, 4), new Tuple(6, 4)
             );
             assertTrue(moves.containsAll(expectedMoves) && expectedMoves.containsAll(moves));
         } catch (Exception e) {
